<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportSubmit">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/txtReport"
            android:textColor="@color/black"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:padding ="3sp"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:id="@+id/spinner"
            android:layout_margin="20sp"
            android:padding="5sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/txtLocation"
            android:textColor="@color/black"
            android:layout_margin="20sp"
            android:padding="5sp"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullLocation"
            android:layout_marginStart="20sp"
            android:layout_marginEnd = "20sp"
            android:padding = "5sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitReport"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="40sp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>